--- a/BackBox.iOS/BackBox.iOS.csproj
+++ b/BackBox.iOS/BackBox.iOS.csproj
@@ -88,6 +88,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="monotouch" />
+    <Reference Include="System.Json" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Default-568h%402x.png" />
